--- a/SQL/SQLiteDatabaseBrowserPortable/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
+++ b/SQL/SQLiteDatabaseBrowserPortable/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
@@ -1,5 +1,5 @@
 [SQLiteDatabaseBrowserPortableSettings]
-LastDrive=P:
-LastDirectory=\Documents\NSI\SQL\SQLiteDatabaseBrowserPortable
+LastDrive=C:
+LastDirectory=\Users\User\Documents\GitHub\NSI\SQL\SQLiteDatabaseBrowserPortable
 [PortableApps.comLauncherLastRunEnvironment]
-PAL:LastPortableAppsBaseDir=P:\Documents\NSI
+PAL:LastPortableAppsBaseDir=C:\Users\User\Documents\GitHub\NSI
